add this is my west

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    hello, this is a test
+    hello, this is a test, and this is my west
 </body>
 </html>
