--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    hello, this is a test, and this is my west
+    hello, this is a test, and this is my west, and that is my nord
 </body>
 </html>
